# DataGovernedForBTC

./: .gitignore  README.md  pyproject.toml
config/: governance.yaml
docs/: ALPHATENANT_STAGE46_DATA_GOVERNANCE_REQUIREMENTS.md  DATA_DIRECTORY_STANDARD.md  FIELD_SEMANTICS.md  GOVERNANCE_CONTRACT.md  MILESTONE_SUMMARY.md  v02_orderbook_contiguous_blocker_2024-07-18.md
reports/coverage/: alpha_tenant_dataset_family_coverage_matrix.json  alpha_tenant_dataset_family_coverage_matrix.md
reports/readiness/: alpha_tenant_research_readiness_okx_btc_market_state_15m_v0_3_20240520_20241108_stage46.json  alpha_tenant_research_readiness_okx_btc_market_state_15m_v0_3_20240520_20241108_stage46.md  (+11 more)
schemas/: alphatenant_snapshot_feature_contract_v_next.json
scripts/: README.md  flowcheck_curated_window.py  run_v02_orderbook_contiguous.sh
snapshots/: snapshot_index.json
tests/: test_alpha_reports.py  test_candlestick_governance.py  test_curated_state.py  test_curated_state_5m.py  test_curated_state_day_finalize.py  test_curated_state_orderbook_note.py  test_curated_state_parallel_cli.py  test_curated_state_parquet_trade.py  test_curated_state_window.py  test_feature_scan.py  test_low_frequency_governance.py  test_orderbook_audit.py  test_orderbook_minute_features.py  test_orderbook_stream_cli.py  test_orderbook_streaming_checkpoint.py  test_path_semantics.py  test_skeleton.py  test_snapshot_admission.py  test_snapshot_index.py  test_stage46_contexts.py  test_trade_date_range.py  test_trade_governance.py  test_trade_stream_cli.py  test_trade_streaming_checkpoint.py
(+18 files in other folders)
