[project]
name = "datagovernedforbtc"
version = "0.1.0"
description = "OKX BTC market data governance system for AlphaTenant"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5",
  "pyarrow>=10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
datagovernedforbtc = "datagovernedforbtc.cli:main"
